<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragment.add.AddNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="20dp"
            android:background="@color/black">

            <ImageView
                android:id="@+id/iv_ship5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:src="@drawable/shape__2_"/>

            <TextView
                android:id="@+id/tv_30мая"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="30dp"
                android:text="@string/_35"
                android:textColor="@color/white1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_17_21"
                android:layout_width="wrap_content"
                android:text="@string/_17_23"
                android:textSize="14sp"
                android:textColor="@color/fff"
                android:layout_gravity="center"
                android:layout_marginEnd="90dp"
                android:layout_height="wrap_content"/>

        </FrameLayout>

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:textColor="@color/grey1"
            android:text="@string/Нужносделат"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etDesription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_tv"
            android:textColor="@color/grey1"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_gravity="center|bottom|start"
        android:layout_margin="50dp"
        android:background="@drawable/et_raunder"/>

    <LinearLayout
        android:id="@+id/btnNote"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_gravity="center|bottom"
        android:layout_margin="50dp"
        android:background="@drawable/it_raunder"/>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_gravity="center|bottom|end"
        android:layout_margin="50dp"
        android:background="@drawable/ft_raunder"/>

</FrameLayout>